# kalipimax

./: .gitignore  LICENCE  README.md  cli.py  config.py  fix_wifi_ssh.sh  install.sh  main.py  pyproject.toml  remote.py  requirements.txt  simulator.py
actions/: __init__.py
core/: __init__.py  hardware.py  logger.py  payload.py  state.py  wifi_profiles.py  wifi_tools.py
modes/: __init__.py  alerts_mode.py  loot_mode.py  mitm_mode.py  network_mode.py  nmap_mode.py  processes_mode.py  profiles_mode.py  responder_mode.py  shells_mode.py  system_mode.py  tools_mode.py  usb_mode.py  wifi_mode.py
tests/: __init__.py  conftest.py  test_modes.py  test_renderer.py  test_state.py
ui/: __init__.py  base_mode.py  keyboard.py  prompt.py  renderer.py
